[gd_scene load_steps=6 format=3 uid="uid://bftb5ck86soym"]

[ext_resource type="Script" uid="uid://qbjjsm8k7uim" path="res://menu-personajes/scripts/menudepjs.gd" id="1_o3tad"]
[ext_resource type="PackedScene" uid="uid://tt3w5p6sk8g0" path="res://menu-personajes/escenas/pixel_panel.tscn" id="1_qlu7l"]
[ext_resource type="PackedScene" uid="uid://brlbhx26o7cmo" path="res://menu-personajes/escenas/pixel_label.tscn" id="2_o3tad"]
[ext_resource type="PackedScene" uid="uid://csenq378na56t" path="res://menu-personajes/escenas/pixel_button.tscn" id="3_j525h"]
[ext_resource type="Texture2D" uid="uid://di68lrjtf2sxo" path="res://menu-personajes/assets/Knuckles.png" id="4_qlu7l"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_o3tad")

[node name="Panel" parent="." instance=ExtResource("1_qlu7l")]
offset_left = 256.0
offset_top = 8.0
offset_right = 960.0
offset_bottom = 584.0

[node name="Label" parent="." instance=ExtResource("2_o3tad")]
offset_left = 344.0
offset_top = 72.0
offset_right = 881.0
offset_bottom = 145.0
text = "Elige tu personaje"
justification_flags = 162

[node name="Button_Izq" parent="." instance=ExtResource("3_j525h")]
offset_left = 352.0
offset_top = 232.0
offset_right = 416.0
offset_bottom = 296.0
theme_override_font_sizes/font_size = 40
text = "<"

[node name="Button_Der" parent="." instance=ExtResource("3_j525h")]
offset_left = 800.0
offset_top = 232.0
offset_right = 864.0
offset_bottom = 296.0
theme_override_font_sizes/font_size = 40
text = ">"

[node name="Button_Ok" parent="." instance=ExtResource("3_j525h")]
offset_left = 568.0
offset_top = 456.0
offset_right = 640.0
offset_bottom = 528.0
theme_override_font_sizes/font_size = 40
text = "âœ”"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(600, 304)
scale = Vector2(5.70455, 5.76316)
texture = ExtResource("4_qlu7l")

[connection signal="pressed" from="Button_Izq" to="." method="_on_button_izq_pressed"]
[connection signal="pressed" from="Button_Der" to="." method="_on_button_der_pressed"]
[connection signal="pressed" from="Button_Ok" to="." method="_on_button_ok_pressed"]
